Added explation of running the application