@@ -1,8 +1,27 @@
-# AimPractice
-## A program that helps users practice their click accuracy 
-* using JavaFX 13
-* using Java sdk 13
-* Might play around with JavaFX scene builder
+<h2> AimPractice </h2>
+<h3> A program that helps users practice their click accuracy </h3>
+
+----
+
+to run, cd into the AimPractice folder, copy and paste this bad boy:
+
+`
+java -jar --module-path <path-to-javafx-sdk-13>/lib --add-modules javafx.controls,javafx.fxml ./out/artifacts/AimPractice_jar/AimPractice.jar 
+`
+
+make sure to change `<path-to-javafx-sdk-13>` to your actual path
+
+I have no idea how to remove the module dependancies 😬
+
+[Download JavaFX here](https://gluonhq.com/products/javafx/)
+
+----
+
+
+* Using JavaFX 13
+* Using Java SDK 13
+* Might play around with JavaFX Scene Builder
 * Still need to move UI implementations to xfml (pls help)
-* also I'm not sure what the project structure should be. Everything is named sample lol.
+* Also I'm not sure what the project structure should be. Everything is named sample lol.
+* Using Intellij IDEA 2019.2.2
 ### Lots of room for improvment
